--- a/views/user_signup.ejs
+++ b/views/user_signup.ejs
@@ -1,4 +1,24 @@
 
 <%- include('header') -%>
-<h1>SignUp</h1>
+<div class="text-center center-div" id="login">
+    <div class="container w-25 py-5 border">
+        <div class="title pb-5">
+            <h2 class="font-weight-bold">SignUp</h2>
+        </div>
+
+        <form action="" method="post">
+            <div class="form-group">
+                <input type="text" name="username" id="" class="form-control" placeholder="username" required>
+            </div>
+            <div class="form-group">
+                <input type="email" name="email" id="" class="form-control" placeholder="email" required>
+                <small class="form-text text-muted text-left">Email will be registered</small>
+            </div>
+            <div class="form-group">
+                <input type="password" name="password" id="" class="form-control" placeholder="password" required>
+            </div>
+            <button type="submit" class="btn btn-success rounded-pill">Submit</button>
+        </form>
+    </div>
+</div>
 <%- include('footer') -%>
