--- a/views/user_signin.ejs
+++ b/views/user_signin.ejs
@@ -1,4 +1,21 @@
 
 <%- include('header') -%>
-<h1>SignIn</h1>
+<div class="text-center center-div">
+    <div class="container py-5 w-25 border">
+        <div class="title pb-5">
+            <h2 class="font-weight-bold">SignIn</h2>
+        </div>
+
+        <form action="" method="post">
+            <div class="form-group">
+                <input type="email" name="email" id="" class="form-control" placeholder="email" required>
+                <small class="form-text text-muted text-left">Registered email</small>
+            </div>
+            <div class="form-group">
+                <input type="password" name="password" class="form-control" id="" placeholder="password" required>
+            </div>
+            <button type="submit" class="btn btn-success rounded-pill">Submit</button>
+        </form>
+    </div>
+</div>
 <%- include('footer') -%>
