Post SignIn & SignUp routes created and attached to forms

--- a/views/user_signup.ejs
+++ b/views/user_signup.ejs
@@ -6,7 +6,7 @@
             <h2 class="font-weight-bold">SignUp</h2>
         </div>
 
-        <form action="" method="post">
+        <form action="/users/signup" method="post">
             <div class="form-group">
                 <input type="text" name="username" id="" class="form-control" placeholder="username" required>
             </div>
