--- a/views/user_signin.ejs
+++ b/views/user_signin.ejs
@@ -6,7 +6,7 @@
             <h2 class="font-weight-bold">SignIn</h2>
         </div>
 
-        <form action="" method="post">
+        <form action="/users/signin" method="post">
             <div class="form-group">
                 <input type="email" name="email" id="" class="form-control" placeholder="email" required>
                 <small class="form-text text-muted text-left">Registered email</small>
