--- a/views/error.ejs
+++ b/views/error.ejs
@@ -4,6 +4,11 @@
         <div class="pb-5 title">
             <h2 class="font-weight-bold"><%=errorSubject%></h2>
             <small class="text-mutted text-left"><%=err%></small>
+            <%if(signin){%>
+                <h3><a href="/users/signin">back</a></h3>
+            <%}else{%>
+                <h3><a href="/users/signup">signup</a></h3>
+            <%}%>
         </div>
     </div>
 </div>
