--- a/views/header.ejs
+++ b/views/header.ejs
@@ -8,3 +8,10 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <% if(locals.user) {%>
+            <h1><%=user.username%></h1>
+        <%}else{%>
+
+        <%}%>        
+    </header>
