--- a/views/success.ejs
+++ b/views/success.ejs
@@ -1,9 +1,6 @@
 <%- include('header') -%>
 
-<h1>Hello World</h1>
-<%= user.username%>
-<%= user.email%>
+<h1>Good Morning</h1>
 
-
-<%- include('header') -%>
+<%- include('footer') -%>
 
