--- a/views/header.ejs
+++ b/views/header.ejs
@@ -11,7 +11,9 @@
     <header>
         <% if(locals.user) {%>
             <h1><%=user.username%></h1>
+            <li><a href="/users/signout">Signout</a></li>
         <%}else{%>
-
+            <li><a href="/users/signin">SignIn</a></li>
+            <li><a href="/users/signup">SignUp</a></li>
         <%}%>        
     </header>
