--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital@0;1&display=swap');
 
-body{
+
+.container-sm{
+    height: 5% important!;
+    font-family: 'Open Sans', sans-serif;
     background-color: aqua;
 }
