--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,34 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital@0;1&display=swap');
 
+*{
+    margin: 0;
+    padding: 0;
+}
+
+.bg-color{
+    background-color:#f64c72;
+}
+
+.text-color{
+    color: #2f2fa1;
+}
 
 .container-sm{
     height: 5% important!;
     font-family: 'Open Sans', sans-serif;
-    background-color: aqua;
+}
+
+li{
+    list-style-type: none;
+}
+
+a{
+    text-decoration: none;
+    color: white;
+    
+}
+
+a:hover{
+    text-decoration: none;
+    color: white;
 }
