--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,11 @@
     font-family: 'Open Sans', sans-serif;
 }
 
+header{
+    padding-left: 0.5%;
+    padding-right: 0.5%;
+}
+
 li{
     list-style-type: none;
 }
