Added icons on home screen

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/style.css">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-    <div class="container-sm bg-color">
+    <div class="container-sm bg-color rounded">
         <header>
             <% if(locals.user) {%>
                 <h3 class="text-left text-color"><%=user.username%></h3>
