--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,22 @@
 <%- include('header') -%>
 
-<section>To do</section>
+<div class="main">
+    <div class="vertical-center-heading">
+        <p class="welcomeHeading">Welcome.</p>
+    </div>
+    <nav class="vertical-center-nav">
+        <ul class="nav-list">
+            <li class="inline-list">
+                <a href="/toDoRoute"><span data-label="Blog" class="fa fa-pencil navi-icon fa-4x"></span></a>
+            </li>
+            <li class="inline-list">
+                <a href="/toDoRoute"><span data-label="Github Profile" class="fa fa-github navi-icon fa-4x"></span></span></a>
+            </li>
+            <li class="inline-list">
+                <a href="/toDoRoute"><span data-label="Resume" class="fa fa-paperclip navi-icon fa-4x"></span></span></span></a>
+            </li>
+        </ul>
+    </nav>
+</main>
 
 <%- include('footer') -%>
