--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,17 +23,37 @@ header{
     padding-right: 0.5%;
 }
 
+.main{
+    height: 300px;
+    position: relative;
+}  
+
+.vertical-center-heading{
+    margin: 0;
+    position: absolute;
+    top: 60%;
+    left: 35%;
+    transform: translateY(-50%);
+}
+
+.welcomeHeading{
+    font-size: 80px;
+    font-weight: 400;
+}
+
+.vertical-center-nav{
+    margin: 0;
+    position: absolute;
+    top: 85%;
+    left: 37%;
+    transform: translateY(-50%);
+}
+
 li{
     list-style-type: none;
+    padding: 20px;
 }
 
-a{
-    text-decoration: none;
-    color: white;
-    
-}
-
-a:hover{
-    text-decoration: none;
-    color: white;
+.inline-list{
+    display: inline;
 }
